# parlor

./: .gitignore  README.md
artifacts/: 02-litert-lm-guide.md  07-benchmarks-m3-pro.md
src/: index.html  pyproject.toml  requirements.txt  server.py  tts.py
