[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "kokoro-onnx>=0.5.0",
    "litert-lm>=0.10.1",
    "numpy>=2.4.4",
    "soundfile>=0.13.1",
    "uvicorn[standard]>=0.43.0",
    "websockets>=16.0",
]
